--- a/auth-custom/io-cd-login/index.html
+++ b/auth-custom/io-cd-login/index.html
@@ -2,8 +2,7 @@
 <html class="dark" lang="en">
   <head>
     <title>Login</title>
-    <link rel="stylesheet" href="src/t42bootstrap.bundle.css" />
-    <script src="src/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
   </head>
 
   <body>
